tests/positive/rule3_remainder.safe
-- Test: rule3_remainder
-- Description: Remainder operation with provably nonzero divisor.
--   Uses the rem operator with a positive-typed divisor.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p133:0610d951
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.3.p134:90a17a3b
-- Expected: ACCEPT

package Safe_Remainder is

   type Signed_Value is range -10_000 .. 10_000;
   type Positive_Mod is range 1 .. 100;

   --  Compute_Remainder: remainder with a positive modulus.
   --  The divisor is of type Positive_Mod (1..100), provably nonzero.
   function Compute_Remainder (V : Signed_Value;
                               M : Positive_Mod) return Signed_Value is
   begin
      --  M is provably nonzero (range 1..100).
      return V rem Signed_Value (M);
   end Compute_Remainder;

   --  Is_Even: checks whether a value is even using rem 2.
   --  The literal 2 is provably nonzero.
   function Is_Even (V : Signed_Value) return Boolean is
   begin
      return (V rem 2) == 0;
   end Is_Even;

end Safe_Remainder;
